format code, readme update, amend link referring, ddown-item pad fix

--- a/media.html
+++ b/media.html
@@ -1,74 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Marcus Linden">
-    <meta name="description" content="zone031">
-    <meta name="keywords" content="lasertag, laser tag, gothenburg">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Media</title>
-</head>
-<body>
-    <header>
-        <section>
-        <section>
-            <h1 id="header-logo">Zone031</h1>
-        </section>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Marcus Linden">
+      <meta name="description" content="zone031">
+      <meta name="keywords" content="lasertag, laser tag, gothenburg">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+      <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <title>Media</title>
+   </head>
+   <body>
+      <header>
+         <section>
+            <section>
+               <h1 id="header-logo">Zone031</h1>
+            </section>
             <div>
-                <ul id="nav" class="nav nav-tabs">
-                    <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link you-are-here">Media</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
-                        <div class="dropdown-menu">
-                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
-                            <a href="piraya.html" class="dropdown-item">Piraya</a>
-                        </div>
-                    </li>
-                    <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
-                </ul>
+               <ul id="nav" class="nav nav-tabs">
+                  <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link you-are-here">Media</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
+                  <li class="col-4 col-md-2 nav-item-dropdown">
+                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
+                     <div class="dropdown-menu">
+                        <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                        <a href="piraya.html" class="dropdown-item">Piraya</a>
+                     </div>
+                  </li>
+                  <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
+               </ul>
             </div>
-        </section>
-    </header>
-    <div class="container-fluid row media-container">
-            <div class="col-md-6">
-                <h2>Twitch</h2> 
-                    <p>Regular live streams from our training sessions see more at our <a class="hyperlink" href="https://www.twitch.tv/lasertaggothenburg">Twitch account</a></p>
-                <iframe title="training video" id="twitch-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+         </section>
+      </header>
+      <div class="container-fluid row media-container">
+         <div class="col-md-6">
+            <h2>Twitch</h2>
+            <p>Regular live streams from our training sessions see more at our <a class="hyperlink" target="_blank" href="https://www.twitch.tv/lasertaggothenburg">Twitch account</a></p>
+            <iframe title="training video" id="twitch-media" src="https://player.twitch.tv/?video=764363194&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+         </div>
+         <div class="col-md-6">
+            <h2>Facebook</h2>
+            <p>On occassion we livestream via mobile phones directly from inside of the arena. These films are the most intimate laser tag experience
+               you can get without actually being inside the arena. You can find all of these videos on our <a class="hyperlink" target="_blank" href="https://www.facebook.com/Zone031/videos/?ref=page_internal">facebook page</a>
+            </p>
+            <iframe title="training video" id="facebook-media" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F255647752334203%2F&show_text=false&width=560" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" allowfullscreen="true"></iframe>
+         </div>
+         <div class="col-md-6">
+            <h2>Youtube</h2>
+            <p>On <a class="hyperlink" target="_blank" href="https://www.youtube.com/channel/UCwTSZl2vJs5-fOfiNRlH26Q">Youtube</a> you can see a lot of films from training sessions at our old arena at Grafiska Vägen.</p>
+            <iframe title="training video" id="youtube-media" width="560" height="315" src="https://www.youtube.com/embed/D72KsRNZsF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+         </div>
+         <div class="col-md-6">
+            <h2>The Hisingen Arena</h2>
+            <div class="sketchfab-embed-wrapper">
+               <iframe id="sketchfab-media" title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/d0f13e02648c4fc7bc82e44eb1ea092a/embed?autostart=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" target="_blank" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+               <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+                  <a href="https://sketchfab.com/3d-models/laserdome-hisingen-d0f13e02648c4fc7bc82e44eb1ea092a?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">Laserdome Hisingen</a>
+                  by <a href="https://sketchfab.com/SmiLeY?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">SmiLeY</a>
+                  on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+               </p>
             </div>
-            <div class="col-md-6">
-             <h2>Facebook</h2>
-             <p>On occassion we livestream via mobile phones directly from inside of the arena. These films are the most intimate laser tag experience
-             you can get without actually being inside the arena. You can find all of these videos on our <a class="hyperlink" href="https://www.facebook.com/Zone031/videos/?ref=page_internal">facebook page</a>
-             </p>
-                <iframe title="training video" id="facebook-media" src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F255647752334203%2F&show_text=false&width=560" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media" allowfullscreen="true"></iframe>
-            </div>
-            <div class="col-md-6">
-                <h2>Youtube</h2>
-                <p>On <a class="hyperlink" href="https://www.youtube.com/channel/UCwTSZl2vJs5-fOfiNRlH26Q">Youtube</a> you can see a lot of films from training sessions at our old arena at Grafiska Vägen.</p>
-                <iframe title="training video" id="youtube-media" width="560" height="315" src="https://www.youtube.com/embed/D72KsRNZsF0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="col-md-6">
-                <h2>The Hisingen Arena</h2>
-                <div class="sketchfab-embed-wrapper">
-                    <iframe id="sketchfab-media" title="A 3D model" width="640" height="480" src="https://sketchfab.com/models/d0f13e02648c4fc7bc82e44eb1ea092a/embed?autostart=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                        <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                        <a href="https://sketchfab.com/3d-models/laserdome-hisingen-d0f13e02648c4fc7bc82e44eb1ea092a?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">Laserdome Hisingen</a>
-                        by <a href="https://sketchfab.com/SmiLeY?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">SmiLeY</a>
-                        on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" rel="noreferrer" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                        </p>
-                </div>
-            </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    </body>
+         </div>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+   </body>
 </html>
