--- a/tournaments.html
+++ b/tournaments.html
@@ -1,124 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Marcus Linden">
-    <meta name="description" content="zone031">
-    <meta name="keywords" content="lasertag, laser tag, gothenburg">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Tournaments</title>
-</head>
-<body>
-    <header>
-        <section>
-        <section>
-            <h1 id="header-logo">Zone031</h1>
-        </section>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Marcus Linden">
+      <meta name="description" content="zone031">
+      <meta name="keywords" content="lasertag, laser tag, gothenburg">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+      <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <title>Tournaments</title>
+   </head>
+   <body>
+      <header>
+         <section>
+            <section>
+               <h1 id="header-logo">Zone031</h1>
+            </section>
             <div>
-                <ul id="nav" class="nav nav-tabs">
-                    <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link you-are-here">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
-                        <div class="dropdown-menu">
-                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
-                            <a href="piraya.html" class="dropdown-item">Piraya</a>
-                        </div>
-                    </li>
-                    <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
-                </ul>
+               <ul id="nav" class="nav nav-tabs">
+                  <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link you-are-here">Tournaments</a></li>
+                  <li class="col-4 col-md-2 nav-item-dropdown">
+                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
+                     <div class="dropdown-menu">
+                        <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                        <a href="piraya.html" class="dropdown-item">Piraya</a>
+                     </div>
+                  </li>
+                  <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
+               </ul>
             </div>
-        </section>
-    </header>
-    <main>
-    <h2>Tournaments hosted by Zone031</h2>
-    <section>
-        <div class="container-fluid row">
-            <div class="col-md-12">
-                <h3>Masters Meeting</h3>
-                <p>
-                Masters Meeting is an annual team competition quad tournament. The tournament has been around for two decades
-                and is together with The Gathering in Stockholm one of the two main open tournaments in Sweden. Outside of nationals
-                Masters Meeting is without a doubt one of the most prestigous tournaments around.  
-                </p>
+         </section>
+      </header>
+      <main>
+         <h2>Tournaments hosted by Zone031</h2>
+         <section>
+            <div class="container-fluid row">
+               <div class="col-md-12">
+                  <h3>Masters Meeting</h3>
+                  <p>
+                     Masters Meeting is an annual team competition quad tournament. The tournament has been around for two decades
+                     and is together with The Gathering in Stockholm one of the two main open tournaments in Sweden. Outside of nationals
+                     Masters Meeting is without a doubt one of the most prestigous tournaments around.  
+                  </p>
+               </div>
+               <div class="col-md-12">
+                  <h3>Masters Meeting 2020</h3>
+                  <p>
+                     Masters Meeting 2020 was the first Masters Meeting hosted at Laserdome Hisingen. The event saw 8 teams competing
+                     in the two main events of Team Competition and Elimination and even more in the baserun event. Players from 
+                     Sweden, Finland, Germany and France attended the event.
+                  </p>
+               </div>
+               <div class="col-md-12">
+                  <h3>Results <i class="fa fa-trophy" aria-hidden="true"></i></h3>
+               </div>
+               <div class="col-md-4">
+                  <h4>Team Competition</h4>
+                  <ul class="MM20-winners">
+                     <li><span>1st</span> - Whats your excuse? (Detum, Xyltiol, Quutamo & dlsember)</li>
+                     <li><span>2nd</span> - Feydakin (Mumin, Smiley, Bambi & Slaanesh)</li>
+                     <li><span>3rd</span> - Jännäkakka (Darkomen, Musti, Milkka & Hacker)</li>
+                  </ul>
+               </div>
+               <div class="col-md-4">
+                  <h4>Team Elimination</h4>
+                  <ul class="MM20-winners">
+                     <li><span>1st</span> - Whats your excuse? (Detum, Xyltiol, Quutamo & dlsember)</li>
+                     <li><span>2nd</span> - Feydakin (Mumin, Smiley, Bambi & Slaanesh)</li>
+                     <li><span>3rd</span> - Jännäkakka (Darkomen, Musti, Milkka & Hacker)</li>
+                  </ul>
+               </div>
+               <div class="col-md-4">
+                  <h4>Baserun</h4>
+                  <ul class="MM20-winners">
+                     <li><span>1st</span> - Mumin, Smiley & Bambi</li>
+                     <li><span>2nd</span> - Detum, Xylitol & Quutamo</li>
+                     <li><span>3rd</span> - Darkomen, Musti, Milkka & Hacker</li>
+                  </ul>
+               </div>
+               <div class="col-md-12">
+                  <h3>Videos</h3>
+               </div>
+               <div class="col-md-6">
+                  <h4>Friday baserun whole event</h4>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+               </div>
+               <div class="col-md-6">
+                  <h4>Sunday elimination and team comp finals</h4>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+               </div>
             </div>
-            <div class="col-md-12">
-                <h3>Masters Meeting 2020</h3>
-                <p>
-                Masters Meeting 2020 was the first Masters Meeting hosted at Laserdome Hisingen. The event saw 8 teams competing
-                in the two main events of Team Competition and Elimination and even more in the baserun event. Players from 
-                Sweden, Finland, Germany and France attended the event.
-                </p>
+         </section>
+         <section>
+            <div class="container-fluid row double-tour">
+               <div class="col-md-12">
+                  <h3>Double Trouble</h3>
+                  <p>
+                     Double trouble was a small tournament played in the summer of 2020. The tournament was played on four different doubles formats.
+                     Smiley & Slaanesh were the winners of the tournament, Gottemaja & Mumin placed second and Bambi & Paulina third. 
+                  </p>
+               </div>
+               <div class="col-md-6">
+                  <h4>Day 1 of tournament</h4>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+               </div>
+               <div class="col-md-6">
+                  <h4>Day 2 of tournament</h4>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+               </div>
             </div>
-            <div class="col-md-12">
-                <h3>Results <i class="fa fa-trophy" aria-hidden="true"></i></h3>
-            </div>
-            <div class="col-md-4">
-                <h4>Team Competition</h4>
-                <ul class="MM20-winners">
-                 <li><span>1st</span> - Whats your excuse? (Detum, Xyltiol, Quutamo & dlsember)</li>
-                 <li><span>2nd</span> - Feydakin (Mumin, Smiley, Bambi & Slaanesh)</li>
-                 <li><span>3rd</span> - Jännäkakka (Darkomen, Musti, Milkka & Hacker)</li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h4>Team Elimination</h4>
-                <ul class="MM20-winners">
-                 <li><span>1st</span> - Whats your excuse? (Detum, Xyltiol, Quutamo & dlsember)</li>
-                 <li><span>2nd</span> - Feydakin (Mumin, Smiley, Bambi & Slaanesh)</li>
-                 <li><span>3rd</span> - Jännäkakka (Darkomen, Musti, Milkka & Hacker)</li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h4>Baserun</h4>
-                <ul class="MM20-winners">
-                 <li><span>1st</span> - Mumin, Smiley & Bambi</li>
-                 <li><span>2nd</span> - Detum, Xylitol & Quutamo</li>
-                 <li><span>3rd</span> - Darkomen, Musti, Milkka & Hacker</li>
-                </ul>
-            </div>
-            <div class="col-md-12">
-                <h3>Videos</h3>
-            </div>
-            <div class="col-md-6">
-                <h4>Friday baserun whole event</h4>
-                <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-            </div>
-            <div class="col-md-6">
-                <h4>Sunday elimination and team comp finals</h4>
-                <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-            </div>
-        </div>
-    </section>
-    <section>
-    <div class="container-fluid row double-tour">
-        <div class="col-md-12">
-            <h3>Double Trouble</h3>
-            <p>
-            Double trouble was a small tournament played in the summer of 2020. The tournament was played on four different doubles formats.
-            Smiley & Slaanesh were the winners of the tournament, Gottemaja & Mumin placed second and Bambi & Paulina third. 
-            </p>
-        </div>
-        <div class="col-md-6">
-            <h4>Day 1 of tournament</h4>
-            <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-        </div>
-        <div class="col-md-6">
-            <h4>Day 2 of tournament</h4>
-            <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-        </div>
-    </div>
-    </section>
-    </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    </body>
+         </section>
+      </main>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+   </body>
 </html>
