--- a/aboutus.html
+++ b/aboutus.html
@@ -1,92 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Marcus Linden">
-    <meta name="description" content="zone031">
-    <meta name="keywords" content="lasertag, laser tag, gothenburg">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>About Us</title>
-</head>
-<body>
-    <header>
-        <section>
-        <section>
-            <h1 id="header-logo">Zone031</h1>
-        </section>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Marcus Linden">
+      <meta name="description" content="zone031">
+      <meta name="keywords" content="lasertag, laser tag, gothenburg">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+      <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <title>About Us</title>
+   </head>
+   <body>
+      <header>
+         <section>
+            <section>
+               <h1 id="header-logo">Zone031</h1>
+            </section>
             <div>
-                <ul id="nav" class="nav nav-tabs">
-                    <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
-                        <div class="dropdown-menu">
-                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
-                            <a href="piraya.html" class="dropdown-item">Piraya</a>
-                        </div>
-                    </li>
-                    <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link you-are-here">About us</a></li>
-                </ul>
+               <ul id="nav" class="nav nav-tabs">
+                  <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
+                  <li class="col-4 col-md-2 nav-item-dropdown">
+                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
+                     <div class="dropdown-menu">
+                        <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                        <a href="piraya.html" class="dropdown-item">Piraya</a>
+                     </div>
+                  </li>
+                  <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link you-are-here">About us</a></li>
+               </ul>
             </div>
-        </section>
-    </header>
-    <main>
-        <h2>About us</h2>
-        <p>Zone031 is a laser tag club founded in 2009. We operate independently on the premises of Laserdome Hisingen. We host
-        regular training activities on Tuesdays, Thursdays and Sundays starting from 18:45. We have decades and decades of 
-        lasertag experience put together and are dedicated to introducing the sport to new players. If you are interested in
-        trying out competetive laser tag, do not hesitate to contact us. The easiest way to do that is to send us a message
-        on <a href="https://www.facebook.com/Zone031" rel="noreferrer" target="_blank" class="hyperlink">facebook!</a> You 
-        can also send Marcus an email at: gottemaja@gmail.com  
-        </p>
-        <h3>Current committee</h3>
-        <div class="row row-cols-1 row-cols-md-3"> 
-                    <div class="col mb-4"> 
-                        <div class="card h-100">
-                            <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Marcus">
-                            <div class="card-body">
-                                <div class="card-title">President - Marcus Lindén</div>
-                                <div class="card-text">Marcus is the current President of Zone031. He is 28 years old and has played laser
-                                tag for over half of his life and has been part of the club since its inception. 
-                                If you have any queries, feel free to drop him an email at: gottemaja@gmail.com
-                                </div>
-                            </div>
-                        </div> 
-                    </div>  
-                        <div class="col mb-4">
-                            <div class="card h-100">
-                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Andreas">
-                                <div class="card-body">
-                                    <div class="card-title">Treasurer - Andreas Kent</div>
-                                    <div class="card-text">Andreas is the long serving treasurer of Zone031. He is 3? years old and has been
-                                    playing laser tag for most of his life. He is one of the founders of the club and is also the main organiser
-                                    for the competitions that we host.</div>
-                                </div>
-                            </div> 
-                        </div>
-                        <div class="col mb-4">
-                            <div class="card h-100">
-                                <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Paulina">
-                                <div class="card-body">
-                                    <div class="card-title">Secretary - Paulina Lager Löfgren</div>
-                                    <div class="card-text">Paulina is our current secretary. She is 18 years old and has been playing laser tag
-                                    for just couple of years and is already very dedicated to the sport. She also does a lot of Zone031's social media 
-                                    work and has taken most of the images on the page.</div>
-                                </div>
-                            </div> 
-                        </div>
-                </div>
-    </main>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    </body>
+         </section>
+      </header>
+      <main>
+         <h2>About us</h2>
+         <p>Zone031 is a laser tag club founded in 2009. We operate independently on the premises of Laserdome Hisingen. We host
+            regular training activities on Tuesdays, Thursdays and Sundays starting from 18:45. We have decades and decades of 
+            lasertag experience put together and are dedicated to introducing the sport to new players. If you are interested in
+            trying out competetive laser tag, do not hesitate to contact us. The easiest way to do that is to send us a message
+            on <a href="https://www.facebook.com/Zone031" rel="noreferrer" target="_blank" class="hyperlink">facebook!</a> You 
+            can also send Marcus an email at: gottemaja@gmail.com  
+         </p>
+         <h3>Current committee</h3>
+         <div class="row row-cols-1 row-cols-md-3">
+            <div class="col mb-4">
+               <div class="card h-100">
+                  <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Marcus">
+                  <div class="card-body">
+                     <div class="card-title">President - Marcus Lindén</div>
+                     <div class="card-text">Marcus is the current President of Zone031. He is 28 years old and has played laser
+                        tag for over half of his life and has been part of the club since its inception. 
+                        If you have any queries, feel free to drop him an email at: gottemaja@gmail.com
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-4">
+               <div class="card h-100">
+                  <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Andreas">
+                  <div class="card-body">
+                     <div class="card-title">Treasurer - Andreas Kent</div>
+                     <div class="card-text">Andreas is the long serving treasurer of Zone031. He is 3? years old and has been
+                        playing laser tag for most of his life. He is one of the founders of the club and is also the main organiser
+                        for the competitions that we host.
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-4">
+               <div class="card h-100">
+                  <img src="assets/css/images/feydakin.jpg" class="card-img-top" alt="image of Paulina">
+                  <div class="card-body">
+                     <div class="card-title">Secretary - Paulina Lager Löfgren</div>
+                     <div class="card-text">Paulina is our current secretary. She is 18 years old and has been playing laser tag
+                        for just couple of years and is already very dedicated to the sport. She also does a lot of Zone031's social media 
+                        work and has taken most of the images on the page.
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </main>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+   </body>
 </html>
