--- a/index.html
+++ b/index.html
@@ -1,108 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Marcus Linden">
-    <meta name="description" content="zone031">
-    <meta name="keywords" content="lasertag, laser tag, gothenburg">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link type="text/css" rel="stylesheet" href="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.css"/>
-    <title>Zone031</title>
-</head>
-<body>
-    <header>
-        <section>
-        <section>
-            <h1 id="header-logo">Zone031</h1>
-        </section>
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="author" content="Marcus Linden">
+      <meta name="description" content="zone031">
+      <meta name="keywords" content="lasertag, laser tag, gothenburg">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;500" rel="stylesheet">
+      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Monoton"/>
+      <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link rel="stylesheet" href="assets/css/style.css">
+      <link type="text/css" rel="stylesheet" href="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.css"/>
+      <title>Zone031</title>
+   </head>
+   <body>
+      <header>
+         <section>
+            <section>
+               <h1 id="header-logo">Zone031</h1>
+            </section>
             <div>
-                <ul id="nav" class="nav nav-tabs">
-                    <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link you-are-here">Home</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
-                    <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
-                    <li class="col-4 col-md-2 nav-item-dropdown"><a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
-                        <div class="dropdown-menu">
-                            <a href="feydakin.html" class="dropdown-item">Feydakin</a>
-                            <a href="piraya.html" class="dropdown-item">Piraya</a>
-                        </div>
-                    </li>
-                    <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
-                </ul>
+               <ul id="nav" class="nav nav-tabs">
+                  <li class="col-4 col-md-2 nav-item"><a href="index.html" class="nav-link you-are-here">Home</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="media.html" class="nav-link">Media</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="thegame.html" class="nav-link">The Game</a></li>
+                  <li class="col-4 col-md-2 nav-item"><a href="tournaments.html" class="nav-link">Tournaments</a></li>
+                  <li class="col-4 col-md-2 nav-item-dropdown">
+                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teams</a>
+                     <div class="dropdown-menu">
+                        <a href="feydakin.html" class="dropdown-item">Feydakin</a>
+                        <a href="piraya.html" class="dropdown-item">Piraya</a>
+                     </div>
+                  </li>
+                  <li class="col-4 col-md-2 nav-item"><a href="aboutus.html" class="nav-link">About us</a></li>
+               </ul>
             </div>
-        </section>
-    </header>
-    <div class="container-fluid row index-container">
-        <div class="col-md-6">
+         </section>
+      </header>
+      <div class="container-fluid row index-container">
+         <div class="col-md-6">
             <div>
-                <h2>Welcome to Zone031!</h2>
-                <p>Zone031 is a laser tag club based in Gothenburg, Sweden. We actively work to promote laser tag as a sport 
-                and are always keen to recruit new members. Currently we have around 20 active members with more occassionals. 
-                We train regularly three times a week and our Thursday sessions are always open to those who find themselves
-                interested in seeing what playing laser tag in a more structured manner is about. <strong>Did we mention that your first
-                training session is entirely free of charge? So there is no reason to hesitate!</strong> Fill out the form below and you will 
-                receive invites to our regular thursday session. If you want to contact us with any questions beforehand, the easiest
-                way is to send a message to our facebook page linked below and someone will reply promptly! If you simply want to
-                see what we're about check out our twitch streams from our training sessions and our instagram account. 
-                </p>
+               <h2>Welcome to Zone031!</h2>
+               <p>Zone031 is a laser tag club based in Gothenburg, Sweden. We actively work to promote laser tag as a sport 
+                  and are always keen to recruit new members. Currently we have around 20 active members with more occassionals. 
+                  We train regularly three times a week and our Thursday sessions are always open to those who find themselves
+                  interested in seeing what playing laser tag in a more structured manner is about. <strong>Did we mention that your first
+                  training session is entirely free of charge? So there is no reason to hesitate!</strong> Fill out the form below and you will 
+                  receive invites to our regular thursday session. If you want to contact us with any questions beforehand, the easiest
+                  way is to send a message to our facebook page linked below and someone will reply promptly! If you simply want to
+                  see what we're about check out our twitch streams from our training sessions and our instagram account. 
+               </p>
             </div>
             <div class="follow-icons"> 
-                <a href="https://www.facebook.com/Zone031/" rel="noreferrer" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
-                <a href="https://www.twitch.tv/lasertaggothenburg" rel="noreferrer" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
-                <a href="https://www.instagram.com/zone031/" rel="noreferrer" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
+               <a href="https://www.facebook.com/Zone031/" rel="noreferrer" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
+               <a href="https://www.twitch.tv/lasertaggothenburg" rel="noreferrer" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
+               <a href="https://www.instagram.com/zone031/" rel="noreferrer" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
             </div>
-        </div>
-        <div class="col-md-6">
+         </div>
+         <div class="col-md-6">
             <h3>Inside the Hisingen arena</h3>
             <div class="MagicScroll" data-options="mode: carousel; height: 350px;">
-                <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0131.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0132.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0133.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0134.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0136.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0137.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0139.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0140.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0141.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0142.JPG" />
-                <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0143.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/arena-hole.png" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0131.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0132.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0133.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0134.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0136.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0137.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0139.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0140.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0141.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0142.JPG" />
+               <img alt="laserdome hisingen arena" src="assets/css/images/IMG_0143.JPG" />
             </div>
-        </div>
-        <div class="col-md-6 form-div">
-                <h3>Sign up for open training invitations every Thursday!</h3>
-                <div>
-                    <p>
-                    Every thursday we host beginner-friendly training sessions at Laserdome Hisingen. First time is free!
-                    This is a great opportunity to come and find out what competetive lasertag is about and get 
-                    introduced to lasertag as a sport. As this is a mixed training group
-                    you will encounter all levels of opposition while at the same time getting tips 
-                    from some of the best lasertag players in Europe.
-                    </p>
-                    <form action="https://formdump.codeinstitute.net/" method="POST">
-                        <div class="signup-form">
-                            <input type="name" name="name" placeholder="Forename Surname" aria-label="input for name" required="required">
-                            <input type="email" name="email" placeholder="name@email.xyz" aria-label="input for email" required="required">
-                            <button type="submit">Submit</button>
-                        </div>
-                    </form>
-                </div>
-        </div>
-        <div class="col-md-6">
+         </div>
+         <div class="col-md-6 form-div">
+            <h3>Sign up for open training invitations every Thursday!</h3>
+            <div>
+               <p>
+                  Every thursday we host beginner-friendly training sessions at Laserdome Hisingen. First time is free!
+                  This is a great opportunity to come and find out what competetive lasertag is about and get 
+                  introduced to lasertag as a sport. As this is a mixed training group
+                  you will encounter all levels of opposition while at the same time getting tips 
+                  from some of the best lasertag players in Europe.
+               </p>
+               <form action="https://formdump.codeinstitute.net/" method="POST">
+                  <div class="signup-form">
+                     <input type="name" name="name" placeholder="Forename Surname" aria-label="input for name" required="required">
+                     <input type="email" name="email" placeholder="name@email.xyz" aria-label="input for email" required="required">
+                     <button type="submit">Submit</button>
+                  </div>
+               </form>
+            </div>
+         </div>
+         <div class="col-md-6">
             <h3>Baserun training!</h3>
             <iframe title="training video" class="embed-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
-        </div>
-    
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.js"></script>
-</body>
+         </div>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <script type="text/javascript" src="assets/magicscrolls/magicscroll-trial/magicscroll/magicscroll.js"></script>
+   </body>
 </html>
