readme complete, code validated

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                </p>
             </div>
             <div class="follow-icons"> 
-               <a href="https://www.facebook.com/Zone031/" rel="noreferrer" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
-               <a href="https://www.twitch.tv/lasertaggothenburg" rel="noreferrer" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
-               <a href="https://www.instagram.com/zone031/" rel="noreferrer" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
+               <a href="https://www.facebook.com/Zone031/" rel="noopener" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i><span>Follow us on Facebook!</span></a>
+               <a href="https://www.twitch.tv/lasertaggothenburg" rel="noopener" target="_blank"><i class="fa fa-twitch" aria-hidden="true"></i><span>Follow us on Twitch!</span></a>
+               <a href="https://www.instagram.com/zone031/" rel="noopener" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i><span>Follow us on Instagram!</span></a>
             </div>
          </div>
          <div class="col-md-6">
@@ -88,7 +88,7 @@
                </p>
                <form action="https://formdump.codeinstitute.net/" method="POST">
                   <div class="signup-form">
-                     <input type="name" name="name" placeholder="Forename Surname" aria-label="input for name" required="required">
+                     <input type="text" name="name" placeholder="Forename Surname" aria-label="input for name" required="required">
                      <input type="email" name="email" placeholder="name@email.xyz" aria-label="input for email" required="required">
                      <button type="submit">Submit</button>
                   </div>
@@ -97,7 +97,7 @@
          </div>
          <div class="col-md-6">
             <h3>Baserun training!</h3>
-            <iframe title="training video" class="embed-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
+            <iframe title="training video" class="embed-video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FZone031%2Fvideos%2F689173604960777%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" allowfullscreen="true"></iframe>
          </div>
       </div>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
