--- a/tournaments.html
+++ b/tournaments.html
@@ -90,11 +90,11 @@
                </div>
                <div class="col-md-6">
                   <h4>Friday baserun whole event</h4>
-                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=537831964&parent=marcusaureliuslinden.github.io&autoplay=false" allowfullscreen="true"  height="378" width="620"></iframe>
                </div>
                <div class="col-md-6">
                   <h4>Sunday elimination and team comp finals</h4>
-                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=538676359&parent=marcusaureliuslinden.github.io&autoplay=false" allowfullscreen="true" height="378" width="620"></iframe>
                </div>
             </div>
          </section>
@@ -109,11 +109,11 @@
                </div>
                <div class="col-md-6">
                   <h4>Day 1 of tournament</h4>
-                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667798701&parent=marcusaureliuslinden.github.io&autoplay=false" allowfullscreen="true"  height="378" width="620"></iframe>
                </div>
                <div class="col-md-6">
                   <h4>Day 2 of tournament</h4>
-                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io&autoplay=false" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+                  <iframe title="competition video" class="embed-video" src="https://player.twitch.tv/?video=667799060&parent=marcusaureliuslinden.github.io&autoplay=false" allowfullscreen="true" height="378" width="620"></iframe>
                </div>
             </div>
          </section>
